<resources>
    <string name="app_name">test</string>
    <string name="recherche">recherche</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="play">Play</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="search_button_text">Search</string>
    <string name="country_flag">country_flag_alt</string>
    <string name="question_search">What Country are you looking for?</string>
    <string name="country_name">Country Name</string>
</resources>